--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,8 @@ project 'Runner', {
   'Release' => :release,
 }
 
+platform :ios, '9.0'
+
 def parse_KV_file(file, separator='=')
   file_abs_path = File.expand_path(file)
   if !File.exists? file_abs_path
@@ -60,9 +62,16 @@ target 'Runner' do
   }
 end
 
+pre_install do |installer|
+  installer.analysis_result.specifications.each do |s|
+    s.swift_version = '4.2' unless s.swift_version
+  end
+end
+
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
+      config.build_settings['SWIFT_VERSION'] = '4.1'  # required by simple_permission
       config.build_settings['ENABLE_BITCODE'] = 'NO'
     end
   end
