--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.12.0+1 
   # flutter_youtube_view: ^1.1.1
-  get_version: ^0.1.0
+  # get_version: ^0.1.0
   intl: ^0.15.7
   intro_views_flutter: '^2.4.0'
   material_design_icons_flutter: ^3.2.3595
