--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: ^0.9.5+2
   cupertino_icons: ^0.1.2
   http: ^0.12.0+1 
   # flutter_youtube_view: ^1.1.1
