--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cached_network_image: ^1.1.1
   cloud_firestore: ^0.9.5+2
   cupertino_icons: ^0.1.2
   http: ^0.12.0+1 
@@ -26,7 +27,7 @@ dependencies:
   # get_version: ^0.1.0
   intl: ^0.15.7
   intro_views_flutter: '^2.4.0'
-  material_design_icons_flutter: ^3.2.3595
+  material_design_icons_flutter: ^3.2.4096
   share: ^0.6.0+1
   url_launcher: ^5.0.1
 
@@ -63,6 +64,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: fonts/Montserrat-Regular.ttf
+          style: italic
   # fonts:
   #   - family: Schyler
   #     fonts:
