--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,9 +22,10 @@ dependencies:
   cached_network_image: ^1.1.1
   cloud_firestore: ^0.9.5+2
   cupertino_icons: ^0.1.2
+  device_id: ^0.2.0
   http: ^0.12.0+1 
   # flutter_youtube_view: ^1.1.1
-  # get_version: ^0.1.0
+  get_version: ^0.1.0
   intl: ^0.15.7
   intro_views_flutter: '^2.4.0'
   material_design_icons_flutter: ^3.2.4096
