--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,8 @@ dependencies:
   cached_network_image: ^1.1.1
   cloud_firestore: ^0.9.5+2
   cupertino_icons: ^0.1.2
-  device_id: ^0.2.0
+  device_id: ^0.1.3
+  flutter_speed_dial: ^1.2.1
   http: ^0.12.0+1 
   # flutter_youtube_view: ^1.1.1
   get_version: ^0.1.0
