--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,9 @@ dependencies:
   cloud_firestore: ^0.9.5+2
   cupertino_icons: ^0.1.2
   device_id: ^0.1.3
+  # flutter_email_sender: ^2.0.3
   flutter_speed_dial: ^1.2.1
   http: ^0.12.0+1 
-  # flutter_youtube_view: ^1.1.1
   get_version: ^0.1.0
   intl: ^0.15.7
   intro_views_flutter: '^2.4.0'
