--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: hiddengems_flutter
-description: A new Flutter project.
+description: Resource app for all the talent in Dayton, OH.
+author: Trey Hope <tr3designs.prints@gmail.com>
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -23,7 +24,6 @@ dependencies:
   cloud_firestore: ^0.9.5+2
   cupertino_icons: ^0.1.2
   device_id: ^0.1.3
-  # flutter_email_sender: ^2.0.2
   flutter_speed_dial: ^1.2.1
   http: ^0.12.0+1 
   get_version: ^0.1.0
@@ -34,11 +34,9 @@ dependencies:
   timeago: ^2.0.10
   url_launcher: ^5.0.1
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
