--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,11 @@ dependencies:
   cached_network_image: ^1.1.1
   cloud_firestore: ^0.9.5+2
   cupertino_icons: ^0.1.2
-  device_id: ^0.1.3
+  # device_id: ^0.1.3
+  device_info: ^0.4.0+2
   flutter_speed_dial: ^1.2.1
   http: ^0.12.0+1 
-  get_version: ^0.1.0
+  # get_version: ^0.1.0
   intl: ^0.15.7
   intro_views_flutter: '^2.4.0'
   material_design_icons_flutter: ^3.2.4096
