--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,12 @@ dependencies:
   flutter:
     sdk: flutter
   cached_network_image: ^1.1.1
-  cloud_firestore: ^0.9.5+2
+  cloud_firestore: ^0.12.9+1
   cupertino_icons: ^0.1.2
   device_info: ^0.4.0+2
+  firebase_auth: ^0.14.0+3
+  firebase_core: ^0.4.0+9
+  flutter_custom_clippers: ^1.0.4
   flutter_speed_dial: ^1.2.1
   http: ^0.12.0+1 
   package_info: ^0.4.0+6
