--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   flutter_speed_dial: ^1.2.1
   http: ^0.12.0+1 
   package_info: ^0.4.0+6
-  # image_picker: ^0.6.1+3
+  image_picker: ^0.6.1+3
   intl: ^0.15.7
   intro_views_flutter: '^2.4.0'
   material_design_icons_flutter: ^3.2.4096
