--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  algolia: ^0.1.6+1
   cached_network_image: ^1.1.1
   cloud_firestore: ^0.12.9+1
   cupertino_icons: ^0.1.2
