--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,9 @@ author: Trey Hope <tr3designs.prints@gmail.com>
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+
+#Increase like so [ 1.0.0+0, 1.0.1+1, 1.0.2+2]
+version: 1.0.2+2
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
