--- a/firebase_algolia_server/functions/package.json
+++ b/firebase_algolia_server/functions/package.json
@@ -12,6 +12,7 @@
     "node": "8"
   },
   "dependencies": {
+    "algolia-firestore-sync": "^2.0.0",
     "algoliasearch": "^3.33.0",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0"
