--- a/web/functions/package.json
+++ b/web/functions/package.json
@@ -13,10 +13,11 @@
     "node": "8"
   },
   "dependencies": {
+    "algolia-firestore-sync": "^2.0.0",
+    "algoliasearch": "^3.34.0",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0",
-    "algoliasearch": "^3.34.0",
-    "algolia-firestore-sync": "^2.0.0"
+    "stripe": "^7.8.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
