--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   algolia: ^0.1.6+1
   cached_network_image: ^1.1.1
+  clipboard_manager: ^0.0.1
   cloud_firestore: ^0.12.9+1
   cupertino_icons: ^0.1.2
   device_info: ^0.4.0+2
