--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   device_info: ^0.4.0+2
   firebase_auth: ^0.14.0+3
   firebase_core: ^0.4.0+9
+  firebase_messaging: ^5.1.6
   firebase_storage: ^3.0.6
   flutter_custom_clippers: ^1.0.4
   flutter_speed_dial: ^1.2.1
