--- a/web/firebase.json
+++ b/web/firebase.json
@@ -12,7 +12,7 @@
     ]
   },
   "hosting": {
-    "public": "public",
+    "public": "dist/web",
     "ignore": [
       "firebase.json",
       "**/.*",
