--- a/web/functions/package.json
+++ b/web/functions/package.json
@@ -14,10 +14,11 @@
   },
   "dependencies": {
     "algolia-firestore-sync": "^2.0.0",
-    "algoliasearch": "^3.34.0",
+    "algoliasearch": "^3.35.0",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0",
-    "stripe": "^7.8.0"
+    "paypal-rest-sdk": "^1.8.1",
+    "stripe": "^7.9.1"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
