--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_storage: ^3.0.6
   flutter_custom_clippers: ^1.0.4
   flutter_speed_dial: ^1.2.1
+  get_it: ^3.0.1
   http: ^0.12.0+1 
   package_info: ^0.4.0+6
   image_picker: ^0.6.1+3
