--- a/web/functions/package.json
+++ b/web/functions/package.json
@@ -17,6 +17,7 @@
     "algoliasearch": "^3.35.0",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0",
+    "nodemailer": "^6.3.1",
     "paypal-rest-sdk": "^1.8.1",
     "stripe": "^7.9.1"
   },
